# ChangeLog for net-wireless/hackrf-tools
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-wireless/hackrf-tools/ChangeLog,v 1.9 2014/08/21 20:10:13 zerochaos Exp $

*hackrf-tools-2014.04.1-r1 (21 Aug 2014)

  21 Aug 2014; Rick Farina <zerochaos@gentoo.org>
  +hackrf-tools-2014.04.1-r1.ebuild, -hackrf-tools-2013.06.1-r1.ebuild,
  -hackrf-tools-2013.07.1.ebuild, -hackrf-tools-2014.04.1.ebuild,
  hackrf-tools-9999.ebuild:
  adding dfu recovery firmware, moving location as requested by upstream, fixing
  udev rule

*hackrf-tools-2014.04.1 (01 May 2014)

  01 May 2014; Rick Farina <zerochaos@gentoo.org>
  +hackrf-tools-2014.04.1.ebuild, hackrf-tools-2013.07.1.ebuild:
  version bump

  23 Apr 2014; Rick Farina <zerochaos@gentoo.org>
  -hackrf-tools-2013.06.1.ebuild:
  drop old ebuild

*hackrf-tools-2013.07.1 (27 Jul 2013)

  27 Jul 2013; Rick Farina <zerochaos@gentoo.org>
  +hackrf-tools-2013.07.1.ebuild:
  version bump

*hackrf-tools-2013.06.1-r1 (27 Jun 2013)

  27 Jun 2013; Rick Farina <zerochaos@gentoo.org> +files/52-hackrf.rules,
  +hackrf-tools-2013.06.1-r1.ebuild:
  adding udev rule to release

  27 Jun 2013; Rick Farina <zerochaos@gentoo.org> hackrf-tools-9999.ebuild:
  adding udev rule for live ebuild

  11 Jun 2013; Rick Farina <zerochaos@gentoo.org> hackrf-tools-2013.06.1.ebuild,
  hackrf-tools-9999.ebuild:
  adding firmware to tagged release

*hackrf-tools-2013.06.1 (11 Jun 2013)

  11 Jun 2013; Rick Farina <zerochaos@gentoo.org>
  +hackrf-tools-2013.06.1.ebuild, hackrf-tools-9999.ebuild:
  stable version added, ebuild cleanup

*hackrf-tools-9999 (07 Jun 2013)

  07 Jun 2013; Rick Farina <zerochaos@gentoo.org> +hackrf-tools-9999.ebuild,
  +metadata.xml:
  initial commit of hackrf-tools