@@ -1,12 +1,0 @@
-DEFINED_PHASES=compile configure install prepare test
-DEPEND=virtual/libusb:1 =net-libs/libhackrf-2014.04.1:= sys-devel/make >=dev-util/cmake-2.8.12 userland_GNU? ( >=sys-apps/findutils-4.4.0 ) virtual/pkgconfig
-DESCRIPTION=library for communicating with HackRF SDR platform
-EAPI=5
-HOMEPAGE=http://greatscottgadgets.com/hackrf/
-KEYWORDS=~amd64 ~arm ~ppc ~x86
-LICENSE=BSD
-RDEPEND=virtual/libusb:1 =net-libs/libhackrf-2014.04.1:=
-SLOT=0
-SRC_URI=mirror://sourceforge/hackrf/hackrf-2014.04.1.tar.xz
-_eclasses_=cmake-utils	da2974fcb060ec927e93a17c835afa67	eutils	06133990e861be0fe60c2b428fd025d9	flag-o-matic	75e24bac8423c515dd9c5717f08feb83	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0f1760274637a138b99bb649202ea402	udev	da001465a2e939c93f7ae16947ce3438
-_md5_=5654927592fd46402634eff9425e6e4e
