@@ -1,6 +1,6 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-wireless/hackrf-tools/hackrf-tools-2014.04.1-r1.ebuild,v 1.1 2014/08/21 20:10:13 zerochaos Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-wireless/hackrf-tools/hackrf-tools-2014.04.1-r2.ebuild,v 1.1 2014/08/21 23:31:14 zerochaos Exp $
 
 EAPI=5
 
@@ -38,9 +38,9 @@ src_install() {
 	if [[ ${PV} != "9999" ]] ; then
 		insinto /usr/share/hackrf
 		newins "${WORKDIR}/hackrf-${PV}/firmware-bin/jawbreaker/hackrf_usb_rom_to_ram.bin" hackrf_jawbreaker_usb_rom_to_ram-${PV}.bin
-		newins "${WORKDIR}/hackrf-${PV}/firmware-bin/jawbreaker/hackrf_usb_ram.dfu" hackrf_jawbreaker_hackrf_usb_ram.dfu-${PV}.bin
+		newins "${WORKDIR}/hackrf-${PV}/firmware-bin/jawbreaker/hackrf_usb_ram.dfu" hackrf_jawbreaker_usb_ram.dfu-${PV}.bin
 		newins "${WORKDIR}/hackrf-${PV}/firmware-bin/hackrf-one/hackrf_usb_rom_to_ram.bin" hackrf_one_usb_rom_to_ram-${PV}.bin
-		newins "${WORKDIR}/hackrf-${PV}/firmware-bin/hackrf-one/hackrf_usb_ram.dfu" hackrf_one_hackrf_usb_ram.dfu-${PV}.bin
+		newins "${WORKDIR}/hackrf-${PV}/firmware-bin/hackrf-one/hackrf_usb_ram.dfu" hackrf_one_usb_ram.dfu-${PV}.bin
 	else
 		ewarn "The compiled firmware files are only available in the versioned releases, you are on your own for this."
 	fi
