@@ -1,6 +1,13 @@
 # ChangeLog for net-wireless/hackrf-tools
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-wireless/hackrf-tools/ChangeLog,v 1.9 2014/08/21 20:10:13 zerochaos Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-wireless/hackrf-tools/ChangeLog,v 1.10 2014/08/21 23:31:14 zerochaos Exp $
+
+*hackrf-tools-2014.04.1-r2 (21 Aug 2014)
+
+  21 Aug 2014; Rick Farina <zerochaos@gentoo.org>
+  +hackrf-tools-2014.04.1-r2.ebuild, -hackrf-tools-2014.04.1-r1.ebuild,
+  hackrf-tools-9999.ebuild:
+  fixing typo
 
 *hackrf-tools-2014.04.1-r1 (21 Aug 2014)
 
